# gravity-investment

./: .gitignore  CLAUDE.md  packages.txt  plan.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/agents/: code-reviewer.md
.claude/skills/create-memory/: SKILL.md
.claude/skills/create-memory/references/: memory-best-practices.md
.claude/skills/internal-comms/examples/: company-newsletter.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/ui-ux-guidelines/: SKILL.md
.claude/skills/use-conditional-rendering-activity/: SKILL.md
.claude/skills/use-effects-effect-event/: SKILL.md
.claude/skills/use-effects-effect-event/references/: effect-event.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/dip_catcher/: app.py  config.py  logic.py  market.py  models.py
src/dip_catcher/sources/: __init__.py  base.py  cache.py  stooq.py  yahoo_jp.py  yfinance_source.py
tests/: test_logic.py  test_sources.py
