[project]
name = "dip-catcher"
version = "0.1.0"
description = "Statistical dip-buying signal dashboard for investment funds, ETFs, and indices"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "playwright>=1.40",
    "pydantic>=2.0",
    "plotly>=5.0",
    "streamlit>=1.30",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dip_catcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
